--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -17,6 +17,7 @@
                 <div class="page1-title">
                     <h2 class="title-h1">Cozy House<span>Shelter for pets in Boston</span></h2>
                 </div>
+                <div class="burger-main"></div>
                 <div class="page1-navigation">
                     <ul class="page1-list">
                         <li class="page1-list-item1"><a class="page1-list-item1" href="">About the shelter</a></li>
@@ -96,23 +97,23 @@
     <h1>How you can help our shelter</h1>
 <div class="help-list1">
 <ul class="help-list-block">
-    <li>
+    <li class="responsive_food">
         <img src="../../assets/icon-pet-food.png" alt="">
         <p class="items">Pet food</p>
     </li>
-    <li>
+    <li class="responsive_transportation">
         <img src="../../assets/icon-transportation.svg" alt="">
         <p class="items">Transportation</p>
     </li>
-    <li>
+    <li class="responsive_toys">
         <img src="../../assets/icon-toys.svg" alt="">
         <p class="items2">Toys</p>
     </li>
-    <li>
+    <li class="responsive_bowls">
         <img src="../../assets/icon-bowls-and-cups.svg" alt="">
         <p class="items">Bowls and cups</p>
     </li>
-    <li>
+    <li class="responsive_shampoos" >
         <img src="../../assets/icon-shampoos.svg" alt="">
         <p class="items">Shampoos</p>
     </li>
@@ -120,19 +121,19 @@
 </div>
 <div class="help-list2">
     <ul class="help-list-block2">
-        <li>
+        <li class="responsive_vitamin">
             <img src="../../assets/icon-vitamins.svg" alt="">
             <p class="items">Vitamins</p>
         </li>
-        <li>
+        <li class="responsive_medicine">
             <img src="../../assets/icon-medicines.svg" alt="">
             <p class="items">Medicines</p>
         </li>
-        <li>
+        <li class="responsive_collars">
             <img src="../../assets/icon-collars-leashes.svg" alt="">
             <p class="items">Collars / leaches</p>
         </li>
-        <li>
+        <li class="responsive_sleeping">
             <img src="../../assets/icon-sleeping-area.svg" alt="">
             <p class="items">Sleaping areas</p>
         </li>
@@ -148,7 +149,7 @@
         <div class="in-addition-block">
             <h1>You can also make a donation</h1>
             <h2>Name of the bank / Type of bank account</h2>
-            <a href="https://www.figma.com/file/JMfuS9b8H7rT321m4btSzB/shelter.-Main-page-(Copy)-(Copy)?node-id=94%3A175"><div class="number"><img class="card-position" src="../../assets/credit-card.png" alt=""><img class="number-position" src="../../assets/8380 2880 8028 8791 7435.png" alt=""></div></a>
+            <a href="https://www.figma.com/file/JMfuS9b8H7rT321m4btSzB/shelter.-Main-page-(Copy)-(Copy)?node-id=94%3A175"><div class="number"><img class="card-position" src="../../assets/credit-card.png" alt=""><p class="number-position">8380 2880 8028 8791 7435</p></div></a>
             <p>Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
         </div>
     </div>
