--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="page1-navigation">
                     <ul class="page1-list">
                         <li class="page1-list-item1"><a class="page1-list-item1" href="">About the shelter</a></li>
-                        <li class="page1-list-item"><a class="page1-list-item" href="../our pets/index.html">Our pets</a></li>
+                        <li class="page1-list-item"><a class="page1-list-item" href="shelter/pages/our pets/index.html">Our pets</a></li>
                         <li class="page1-list-item"><a class="page1-list-item" href="">Help the shelter</a></li>
                         <li class="page1-list-item"><a class="page1-list-item" href="">Contacts</a></li>
                     </ul>
@@ -64,7 +64,7 @@
             </div>
             <div class="page3-list">
                 <ul class="photos">
-                    <li class="list-stile-item1"><button class="button"><img src="../../assets/Arrowleft.png" alt=""></button></li>
+                    <li class="list-stile-item1"><button class="button"><img src="shelter/assets/Arrowleft.png" alt=""></button></li>
                     <li class="list-stile-item2"><a href="">
                             <div class="white-rectangle">
                                 <div class="first-animal"></div>
@@ -86,7 +86,7 @@
                                 <button class="learn-more">Learn more</button>
                             </div>
                         </a></li>
-                    <li class="list-stile-item5"><button class="button"><img src="../../assets/Arrow-right.png" alt=""></button></li>
+                    <li class="list-stile-item5"><button class="button"><img src="shelter/assets/Arrow-right.png" alt=""></button></li>
                 </ul>
             </div>
       <button class="get-know">Get to know the rest</button>
@@ -98,23 +98,23 @@
 <div class="help-list1">
 <ul class="help-list-block">
     <li class="responsive_food">
-        <img src="../../assets/icon-pet-food.png" alt="">
+        <img src="shelter/assets/icon-pet-food.png" alt="">
         <p class="items">Pet food</p>
     </li>
     <li class="responsive_transportation">
-        <img src="../../assets/icon-transportation.svg" alt="">
+        <img src="shelter/assets/icon-transportation.svg" alt="">
         <p class="items">Transportation</p>
     </li>
     <li class="responsive_toys">
-        <img src="../../assets/icon-toys.svg" alt="">
+        <img src="shelter/assets/icon-toys.svg" alt="">
         <p class="items2">Toys</p>
     </li>
     <li class="responsive_bowls">
-        <img src="../../assets/icon-bowls-and-cups.svg" alt="">
+        <img src="shelter/assets/icon-bowls-and-cups.svg" alt="">
         <p class="items">Bowls and cups</p>
     </li>
     <li class="responsive_shampoos" >
-        <img src="../../assets/icon-shampoos.svg" alt="">
+        <img src="shelter/assets/icon-shampoos.svg" alt="">
         <p class="items">Shampoos</p>
     </li>
 </ul>
@@ -122,19 +122,19 @@
 <div class="help-list2">
     <ul class="help-list-block2">
         <li class="responsive_vitamin">
-            <img src="../../assets/icon-vitamins.svg" alt="">
+            <img src="shelter/assets/icon-vitamins.svg" alt="">
             <p class="items">Vitamins</p>
         </li>
         <li class="responsive_medicine">
-            <img src="../../assets/icon-medicines.svg" alt="">
+            <img src="shelter/assets/icon-medicines.svg" alt="">
             <p class="items">Medicines</p>
         </li>
         <li class="responsive_collars">
-            <img src="../../assets/icon-collars-leashes.svg" alt="">
+            <img src="shelter/assets/icon-collars-leashes.svg" alt="">
             <p class="items">Collars / leaches</p>
         </li>
         <li class="responsive_sleeping">
-            <img src="../../assets/icon-sleeping-area.svg" alt="">
+            <img src="shelter/assets/icon-sleeping-area.svg" alt="">
             <p class="items">Sleaping areas</p>
         </li>
         
@@ -149,7 +149,7 @@
         <div class="in-addition-block">
             <h1>You can also make a donation</h1>
             <h2>Name of the bank / Type of bank account</h2>
-            <a href="https://www.figma.com/file/JMfuS9b8H7rT321m4btSzB/shelter.-Main-page-(Copy)-(Copy)?node-id=94%3A175"><div class="number"><img class="card-position" src="../../assets/credit-card.png" alt=""><p class="number-position">8380 2880 8028 8791 7435</p></div></a>
+            <a href="https://www.figma.com/file/JMfuS9b8H7rT321m4btSzB/shelter.-Main-page-(Copy)-(Copy)?node-id=94%3A175"><div class="number"><img class="card-position" src="shelter/assets/credit-card.png" alt=""><p class="number-position">8380 2880 8028 8791 7435</p></div></a>
             <p>Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
         </div>
     </div>
@@ -160,13 +160,13 @@
   <div class="last-page">
       <ul class="footer-list"> 
           <li><h1 class="footer-item1">For questions and suggestions</h1></li>
-          <li><a class="footer-item2"href="https://mail.google.com/mail/u/0/#inbox"><div class="icon1"><img src="../../assets/icon-email.png" alt=""></div><p>email@shelter.com</p> </a></li>
-          <li><a class="footer-item3" href=""><div class="icon2"><img src="../../assets/icon-phone.png" alt=""></div><p>+13 674 567 75 54</p> </a></li>
+          <li><a class="footer-item2"href="https://mail.google.com/mail/u/0/#inbox"><div class="icon1"><img src="shelter/assets/icon-email.png" alt=""></div><p>email@shelter.com</p> </a></li>
+          <li><a class="footer-item3" href=""><div class="icon2"><img src="shelter/assets/icon-phone.png" alt=""></div><p>+13 674 567 75 54</p> </a></li>
       </ul>
       <ul class="footer-list2"> 
         <li><h1 class="footer-item1">We are waiting for your visit</h1></li>
-        <li><a class="footer-item2 h"href="https://mail.google.com/mail/u/0/#inbox"><div class="icon2 footer-position"><img src="../../assets/icon-marker.png" alt=""></div><p>1 Central Street, Boston (entrance from the store)</p></a></li>
-        <li><a class="footer-item3 m" href=""><div class="icon4 "><img src="../../assets/icon-marker.png" alt=""></div><p>18 South Park, London</p></a></li>
+        <li><a class="footer-item2 h"href="https://mail.google.com/mail/u/0/#inbox"><div class="icon2 footer-position"><img src="shelter/assets/icon-marker.png" alt=""></div><p>1 Central Street, Boston (entrance from the store)</p></a></li>
+        <li><a class="footer-item3 m" href=""><div class="icon4 "><img src="shelter/assets/icon-marker.png" alt=""></div><p>18 South Park, London</p></a></li>
     </ul>
    <div class="footer-pupy"></div>
   </div>
